--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,1 @@
-server.port=8088
-# ==============================================================
-# = Data Source
-# ==============================================================
-spring.datasource.url = jdbc:mysql://localhost:3306/starfin?useSSL=true
-spring.datasource.username = starfinadmin
-spring.datasource.password = s74rf1n!@#
-#spring.datasource.url = jdbc:sqlserver://localhost/SQLEXPRESS;Database=master;Trusted_Connection=True
-#spring.datasource.username = sa
-#spring.datasource.password = admin
-
-
-# ==============================================================
-# = Keep the connection alive if idle for a long time (needed in production)
-# ==============================================================
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-
-# ==============================================================
-# = Show or not log for each sql query
-# ==============================================================
-spring.jpa.show-sql = true
-
-# ==============================================================
-# = Hibernate ddl auto (create, create-drop, update)
-# ==============================================================
-#spring.jpa.hibernate.ddl-auto = update
-
-# ==============================================================
-# = The SQL dialect makes Hibernate generate better SQL for the chosen database
-# ==============================================================
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
-spring.queries.users-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
-
-# ==============================================================
-# = Initialize the database using data.sql script
-# ==============================================================
-#spring.datasource.initialization-mode=always
-
-#spring.security.user.name=chanaka
-#spring.security.user.password=pass
+spring.profiles.active=prod
