--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>au.com.onesysconsulting.cscparts</groupId>
 	<artifactId>dashboard</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
 	<name>demo</name>
 	<description>CSCParts - Dashboard</description>
 
@@ -37,6 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -85,7 +91,8 @@
     </dependencies>
 
     <build>
-        <plugins>
+      <finalName>dashboard</finalName>
+      <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
