--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 server.port=8088
+#server.servlet.session.timeout=55s
 # ==============================================================
 # = Data Source
 # ==============================================================
