--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
+    "vue-google-charts": "^0.3.2",
+    "vue-router": "^3.0.7",
     "vuetify": "^2.0.0",
     "vuex": "^3.1.1"
   },
