--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,10 @@ server.port=8088
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://localhost:3306/starfin?useSSL=true
-spring.datasource.username = starfinadmin
-spring.datasource.password = s74rf1n!@#
+spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;Instance=EXOSQL2008;databaseName=Upgrade;
+spring.datasource.username=ExoAdmin
+spring.datasource.password=3x04dm1n
+
 
 # ==============================================================
 # = Keep the connection alive if idle for a long time (needed in production)
@@ -26,7 +27,7 @@ spring.jpa.show-sql = true
 # ==============================================================
 # = The SQL dialect makes Hibernate generate better SQL for the chosen database
 # ==============================================================
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
