CSCParts iframe embed version

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -42,3 +42,4 @@ spring.queries.roles-query=select u.user_name, r.role from onesys_user u inner j
 
 #spring.security.user.name=chanaka
 #spring.security.user.password=pass
+allow.iframe.access.domain=192.168.56.1:4000
